Returned to original data

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 94,
    "id": "2045b438",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 95,
    "id": "9a19494b",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 96,
    "id": "f3940143",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 97,
    "id": "1e01a4cb",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 98,
    "id": "79be9273",
    "metadata": {},
    "outputs": [],
@@ -456,14 +456,14 @@
     "    last_experience_years = most_recent_exp.get('duration_calc', 0)\n",
     "\n",
     "    # Keep only title and responsibilities for each experience\n",
-    "    cleaned_experiences = []\n",
-    "    for exp in experiences:\n",
-    "        cleaned_exp = {}\n",
-    "        if 'title' in exp:\n",
-    "            cleaned_exp['title'] = exp['title']\n",
-    "        if 'responsibilities' in exp:\n",
-    "            cleaned_exp['responsibilities'] = exp['responsibilities']\n",
-    "        cleaned_experiences.append(cleaned_exp)\n",
+    "    # cleaned_experiences = []\n",
+    "    # for exp in experiences:\n",
+    "    #     cleaned_exp = {}\n",
+    "    #     if 'title' in exp:\n",
+    "    #         cleaned_exp['title'] = exp['title']\n",
+    "    #     if 'responsibilities' in exp:\n",
+    "    #         cleaned_exp['responsibilities'] = exp['responsibilities']\n",
+    "    #     cleaned_experiences.append(cleaned_exp)\n",
     "\n",
     "    # Return updated structure including the modified list (with CLEARED level for target ONLY)\n",
     "    return {\n",
@@ -472,7 +472,7 @@
     "        \"total_experience_time\": f\"{round(total_experience_years, 2)} Years\",\n",
     "        \"last_experience_time\": f\"{round(last_experience_years, 2)} Years\",\n",
     "        \"target_job_title\": target_job_title,\n",
-    "        \"updated_experience_json\": json.dumps(cleaned_experiences)\n",
+    "        \"updated_experience_json\": json.dumps(experiences)\n",
     "    }\n",
     "\n",
     "# Now apply to the DataFrame\n",
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 99,
    "id": "b7817397",
    "metadata": {},
    "outputs": [],
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 100,
    "id": "8d26c162",
    "metadata": {},
    "outputs": [],
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 101,
    "id": "5a8cf8c5",
    "metadata": {},
    "outputs": [],
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 102,
    "id": "1bdb668f",
    "metadata": {},
    "outputs": [],
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 103,
    "id": "b553f6e2",
    "metadata": {},
    "outputs": [],
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 104,
    "id": "9912de9e",
    "metadata": {},
    "outputs": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 105,
    "id": "3a58811a",
    "metadata": {},
    "outputs": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 106,
    "id": "4209d884",
    "metadata": {},
    "outputs": [],
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 107,
    "id": "ddad489a",
    "metadata": {},
    "outputs": [],
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 108,
    "id": "b3f71b96",
    "metadata": {},
    "outputs": [
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 109,
    "id": "5df53335",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 110,
    "id": "cbd7bffd",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 111,
    "id": "a31edb56",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 112,
    "id": "6e42c98d",
    "metadata": {},
    "outputs": [
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 113,
    "id": "3e562e7e",
    "metadata": {},
    "outputs": [],
@@ -1153,19 +1153,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 114,
    "id": "7b3ed737",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Senior experience range: 10.1 Years to 18.81 Years\n",
-      "Mid experience range: 6.37 Years to 19.44 Years\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pick 700 records of a senior, 700 of a mid, 700 of a junior, and save that file in ./Baseline/cleaned_resumes.csv\n",
     "# For seniors and mids: pick the top 700 most experienced (by total_experience_time)\n",
@@ -1191,17 +1182,19 @@
     "\n",
     "# Juniors: random sample (they're only ~750 total)\n",
     "junior_sample = junior_df.sample(n=min(700, len(junior_df)), random_state=42)\n",
+    "# senior_sample = senior_df.sample(n=min(700, len(senior_df)), random_state=42)\n",
+    "# mid_sample = mid_df.sample(n=min(700, len(mid_df)), random_state=42)\n",
     "\n",
     "# Combine the samples\n",
     "balanced_df = pd.concat([senior_sample, mid_sample, junior_sample], ignore_index=True)\n",
     "\n",
-    "print(f\"Senior experience range: {senior_sample['total_experience_time'].iloc[-1]} to {senior_sample['total_experience_time'].iloc[0]}\")\n",
-    "print(f\"Mid experience range: {mid_sample['total_experience_time'].iloc[-1]} to {mid_sample['total_experience_time'].iloc[0]}\")"
+    "# print(f\"Senior experience range: {senior_sample['total_experience_time'].iloc[-1]} to {senior_sample['total_experience_time'].iloc[0]}\")\n",
+    "# print(f\"Mid experience range: {mid_sample['total_experience_time'].iloc[-1]} to {mid_sample['total_experience_time'].iloc[0]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "id": "a1b68f24",
    "metadata": {},
    "outputs": [
@@ -1226,8 +1219,6 @@
     "balanced_df.to_csv('./Smaller Models/cleaned_resumes.csv', index=False)\n",
     "balanced_df.to_csv('./Big Models/cleaned_resumes.csv', index=False)\n",
     "\n",
-    "\n",
-    "\n",
     "print(f\"Saved {len(balanced_df)} records to ./Baseline/cleaned_resumes.csv\")\n",
     "print(f\"\\nExperience level distribution:\")\n",
     "print(balanced_df['experience_level'].value_counts())\n"
@@ -1250,7 +1241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
