--- a/Smaller Models/distillBert.ipynb
+++ b/Smaller Models/distillBert.ipynb
@@ -32,13 +32,13 @@
       "outputs": [
         {
           "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'torch'",
+          "evalue": "No module named 'transformers'",
           "output_type": "error",
           "traceback": [
             "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
             "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m accuracy_score, f1_score, classification_report, confusion_matrix\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtransformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AutoTokenizer, AutoModelForSequenceClassification, TrainingArguments, Trainer\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# Check if running on CPU or CUDA\u001b[39;00m\n",
-            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'torch'"
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m accuracy_score, f1_score, classification_report, confusion_matrix\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtransformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AutoTokenizer, AutoModelForSequenceClassification, TrainingArguments, Trainer\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# Check if running on CPU or CUDA\u001b[39;00m\n\u001b[32m     12\u001b[39m device = torch.device(\u001b[33m\"\u001b[39m\u001b[33mcuda\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m torch.cuda.is_available() \u001b[38;5;28;01melse\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mcpu\u001b[39m\u001b[33m\"\u001b[39m)\n",
+            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'transformers'"
           ]
         }
       ],
@@ -295,8 +295,7 @@
         "MODEL_NAME = \"distilbert-base-uncased\"\n",
         "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME)\n",
         "\n",
-        "MAX_LEN = 512  # try 384 if your text is long and you have enough memory\n",
-        "\n",
+        "MAX_LEN = 512\n",
         "def tokenize(texts):\n",
         "    return tokenizer(\n",
         "        texts,\n",
