--- a/Smaller Models/roberta.ipynb
+++ b/Smaller Models/roberta.ipynb
@@ -59,7 +59,7 @@
         "\n",
         "print(\"Shape:\", df.shape)\n",
         "print(\"Columns:\", list(df.columns))\n",
-        "print(\"\\nTarget distribution:\\n\", df[TARGET_COL].value_counts(dropna=False))\n"
+        "print(\"\\nTarget distribution:\\n\", df[TARGET_COL].value_counts(dropna=False))"
       ]
     },
     {
