Commit from Rane branch

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 21,
    "id": "2045b438",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 22,
    "id": "9a19494b",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 23,
    "id": "f3940143",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 24,
    "id": "1e01a4cb",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 25,
    "id": "79be9273",
    "metadata": {},
    "outputs": [],
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 26,
    "id": "b7817397",
    "metadata": {},
    "outputs": [],
@@ -499,6 +499,7 @@
     "    \"\"\"\n",
     "    Parse the experience JSON and convert it to a readable text format.\n",
     "    Each experience is labeled as \"Experience 1:\", \"Experience 2:\", etc.\n",
+    "    Removes experience type entirely.\n",
     "    \"\"\"\n",
     "    try:\n",
     "        experiences = json.loads(experience_json)\n",
@@ -521,9 +522,7 @@
     "            if exp.get('level'):\n",
     "                exp_text += f\"Level: {exp['level']}. \"\n",
     "            \n",
-    "            # Add employment type\n",
-    "            if exp.get('employment_type'):\n",
-    "                exp_text += f\"Employment Type: {exp['employment_type']}. \"\n",
+    "            # DO NOT ADD experience type\n",
     "            \n",
     "            # Add dates\n",
     "            if exp.get('dates'):\n",
@@ -574,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 27,
    "id": "8d26c162",
    "metadata": {},
    "outputs": [],
@@ -654,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 28,
    "id": "5a8cf8c5",
    "metadata": {},
    "outputs": [],
@@ -739,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 29,
    "id": "1bdb668f",
    "metadata": {},
    "outputs": [],
@@ -809,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 30,
    "id": "b553f6e2",
    "metadata": {},
    "outputs": [],
@@ -820,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 31,
    "id": "9912de9e",
    "metadata": {},
    "outputs": [
@@ -852,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 32,
    "id": "3a58811a",
    "metadata": {},
    "outputs": [
@@ -885,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 33,
    "id": "4209d884",
    "metadata": {},
    "outputs": [],
@@ -908,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 34,
    "id": "ddad489a",
    "metadata": {},
    "outputs": [],
@@ -965,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 35,
    "id": "b3f71b96",
    "metadata": {},
    "outputs": [
@@ -999,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 36,
    "id": "5df53335",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 37,
    "id": "cbd7bffd",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 38,
    "id": "a31edb56",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 39,
    "id": "6e42c98d",
    "metadata": {},
    "outputs": [
@@ -1142,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 40,
    "id": "3e562e7e",
    "metadata": {},
    "outputs": [],
@@ -1153,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 41,
    "id": "7b3ed737",
    "metadata": {},
    "outputs": [],
@@ -1194,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "a1b68f24",
    "metadata": {},
    "outputs": [
