commit current changes

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "2045b438",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "9a19494b",
    "metadata": {},
    "outputs": [
@@ -241,10 +241,10 @@
       "4                                                 []   \n",
       "\n",
       "                                      certifications  summary_count  \n",
-      "0                                                 \"\"            100  \n",
-      "1                                                 \"\"            232  \n",
-      "2                                                 \"\"            167  \n",
-      "3                                                 \"\"            232  \n",
+      "0                                                 \"\"             14  \n",
+      "1                                                 \"\"             27  \n",
+      "2                                                 \"\"             22  \n",
+      "3                                                 \"\"             27  \n",
       "4  \"{\\\"name\\\": \\\"ESD Program\\\", \\\"issuer\\\": \\\"Zen...              0  \n"
      ]
     }
@@ -285,7 +285,7 @@
     "            continue\n",
     "\n",
     "df = pd.DataFrame(all_records)\n",
-    "df['summary_count'] = df['summary'].fillna('').apply(len)\n",
+    "df['summary_count'] = df['summary'].fillna('').apply(lambda x: len(str(x).split()))\n",
     "df = df.drop(columns=['phone'])\n",
     "\n",
     "print(f\"Processed {len(all_records)} records\")\n",
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "f3940143",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "1e01a4cb",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "79be9273",
    "metadata": {},
    "outputs": [],
@@ -517,11 +517,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4f7d69bc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "import json\n",
+    "\n",
+    "def _parse_date_flexible(date_str):\n",
+    "    if not isinstance(date_str, str):\n",
+    "        return None\n",
+    "    s = date_str.strip()\n",
+    "    if not s:\n",
+    "        return None\n",
+    "    if s.lower() == \"present\":\n",
+    "        try:\n",
+    "            return datetime.strptime(PRESENT_DATE, \"%Y-%m-%d\")\n",
+    "        except Exception:\n",
+    "            return None\n",
+    "    for fmt in (\"%Y-%m-%d\", \"%Y/%m/%d\", \"%Y-%m\", \"%Y/%m\", \"%Y\", \"%b %Y\", \"%B %Y\"):\n",
+    "        try:\n",
+    "            return datetime.strptime(s, fmt)\n",
+    "        except Exception:\n",
+    "            pass\n",
+    "    return None\n",
+    "\n",
+    "def _format_like(dt, template):\n",
+    "    if not isinstance(template, str):\n",
+    "        return dt.strftime(\"%Y-%m-%d\")\n",
+    "    t = template.strip()\n",
+    "    if t.lower() == \"present\":\n",
+    "        return \"Present\"\n",
+    "    if len(t) == 4 and t.isdigit():\n",
+    "        return dt.strftime(\"%Y\")\n",
+    "    if \"-\" in t:\n",
+    "        parts = t.split(\"-\")\n",
+    "        if len(parts) == 2:\n",
+    "            return dt.strftime(\"%Y-%m\")\n",
+    "        if len(parts) >= 3:\n",
+    "            return dt.strftime(\"%Y-%m-%d\")\n",
+    "    if \"/\" in t:\n",
+    "        parts = t.split(\"/\")\n",
+    "        if len(parts) == 2:\n",
+    "            return dt.strftime(\"%Y/%m\")\n",
+    "        if len(parts) >= 3:\n",
+    "            return dt.strftime(\"%Y/%m/%d\")\n",
+    "    return dt.strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "def _fix_experience_json(experience_json):\n",
+    "    try:\n",
+    "        experiences = json.loads(experience_json)\n",
+    "    except Exception:\n",
+    "        return experience_json\n",
+    "\n",
+    "    if not isinstance(experiences, list) or len(experiences) == 0:\n",
+    "        return experience_json\n",
+    "\n",
+    "    for exp in experiences:\n",
+    "        if not isinstance(exp, dict):\n",
+    "            continue\n",
+    "        exp.pop(\"employment_type\", None)\n",
+    "        exp.pop(\"employmentType\", None)\n",
+    "\n",
+    "    for i in range(len(experiences) - 2, -1, -1):\n",
+    "        cur = experiences[i]\n",
+    "        nxt = experiences[i + 1]\n",
+    "        if not isinstance(cur, dict) or not isinstance(nxt, dict):\n",
+    "            continue\n",
+    "\n",
+    "        cur_dates = cur.get(\"dates\") if isinstance(cur.get(\"dates\"), dict) else {}\n",
+    "        nxt_dates = nxt.get(\"dates\") if isinstance(nxt.get(\"dates\"), dict) else {}\n",
+    "        cur[\"dates\"] = cur_dates\n",
+    "        nxt[\"dates\"] = nxt_dates\n",
+    "\n",
+    "        cur_end_str = cur_dates.get(\"end\", \"\")\n",
+    "        nxt_start_str = nxt_dates.get(\"start\", \"\")\n",
+    "\n",
+    "        cur_end_dt = _parse_date_flexible(cur_end_str)\n",
+    "        nxt_start_dt = _parse_date_flexible(nxt_start_str)\n",
+    "        if not cur_end_dt or not nxt_start_dt:\n",
+    "            continue\n",
+    "\n",
+    "        if cur_end_dt > nxt_start_dt:\n",
+    "            dur_years = cur.get(\"duration_calc\")\n",
+    "            if not isinstance(dur_years, (int, float)) or dur_years <= 0:\n",
+    "                cur_start_dt = _parse_date_flexible(cur_dates.get(\"start\", \"\"))\n",
+    "                if not cur_start_dt:\n",
+    "                    continue\n",
+    "                dur_years = max(0, (cur_end_dt - cur_start_dt).days / 365.25)\n",
+    "\n",
+    "            new_end_dt = nxt_start_dt\n",
+    "            new_start_dt = new_end_dt - timedelta(days=int(round(dur_years * 365.25)))\n",
+    "            if new_start_dt > new_end_dt:\n",
+    "                new_start_dt = new_end_dt\n",
+    "\n",
+    "            cur_start_str = cur_dates.get(\"start\", \"\")\n",
+    "            cur_dates[\"end\"] = _format_like(new_end_dt, cur_end_str)\n",
+    "            cur_dates[\"start\"] = _format_like(new_start_dt, cur_start_str)\n",
+    "\n",
+    "    return json.dumps(experiences)\n",
+    "\n",
+    "\n",
+    "df[\"experience\"] = df[\"experience\"].apply(_fix_experience_json)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -535,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "b7817397",
    "metadata": {},
    "outputs": [],
@@ -600,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "8d26c162",
    "metadata": {},
    "outputs": [],
@@ -669,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "5a8cf8c5",
    "metadata": {},
    "outputs": [],
@@ -741,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "1bdb668f",
    "metadata": {},
    "outputs": [],
@@ -795,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "b553f6e2",
    "metadata": {},
    "outputs": [],
@@ -805,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "2bdb164c",
    "metadata": {},
    "outputs": [
@@ -834,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "89fc0ce5",
    "metadata": {},
    "outputs": [
@@ -865,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "3a58811a",
    "metadata": {},
    "outputs": [],
@@ -873,7 +972,7 @@
     "import urllib.request\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "\n",
-    "MODEL = \"mistralai/ministral-3b-2512\"\n",
+    "MODEL = \"google/gemma-3n-e4b-it\"\n",
     "OPENROUTER_URL = \"https://openrouter.ai/api/v1/chat/completions\"\n",
     "OPENROUTER_API_KEY = os.getenv(\"OPENROUTER_API_KEY\")\n",
     "MAX_WORKERS = 10\n",
@@ -882,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "4209d884",
    "metadata": {},
    "outputs": [],
@@ -895,11 +994,13 @@
     "            if val and val.lower() != \"nan\":\n",
     "                parts.append(f\"{col}: {val}\")\n",
     "    resume_text = \"\\n\".join(parts)\n",
-    "    return f\"\"\"Based on the following resume information, write a professional summary that highlights the candidate's key strengths, experience, and expertise that summarizes it as if you are the person writing it. Write in paragraph form and no text decoration. based on the record and the data you have been given, write the paragraph to reflect that, which means lengh and details are only bassed on the data. Be specific and use details from the resume. Pick a random starter, meaning you dont have to start with years, or experience, or name, be random and pick each in a randomized way, be creative. Do NOT mention seniority level.\n",
+    "    return f\"\"\"You are the person described in this resume. Write a professional summary for your resume in first person that captures who you are as a professional.\n",
     "\n",
-    "{resume_text}\n",
+    "    {resume_text}\n",
     "\n",
-    "Write ONLY the summary, nothing else:\"\"\"\n",
+    "    Focus on what makes your experience distinctive. Let the summary flow naturally - if you have deep expertise in one area, lean into that. If your career spans diverse technologies, show that breadth. If you've worked on interesting projects, bring them to life. The summary should feel authentic to your specific background, not generic.\n",
+    "\n",
+    "    Write only the summary paragraph in text format only. min words 20, max words 70. Try to base the lengh on the resume data itself, if there is a lot to talk about, mention them, if not, try to be as short and concise as possible. for example, one expereince is not something to talk about much, but multiple can get you to talk more. be as simular as possible to the data and nothing from outside.\"\"\"\n",
     "\n",
     "def call_api(prompt):\n",
     "    payload = json.dumps({\n",
@@ -927,12 +1028,12 @@
     "        return idx, summary\n",
     "    except Exception as e:\n",
     "        print(f\"Row {idx} failed: {e}\")\n",
-    "        return idx, row.get(\"summary\", \"\")\n"
+    "        return idx, row.get(\"summary\", \"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "ddad489a",
    "metadata": {},
    "outputs": [
@@ -945,7 +1046,6 @@
       "Processed 200/4626\n",
       "Processed 300/4626\n",
       "Processed 400/4626\n",
-      "Row 447 failed: HTTP Error 502: Bad Gateway\n",
       "Processed 500/4626\n",
       "Processed 600/4626\n",
       "Processed 700/4626\n",
@@ -962,9 +1062,11 @@
       "Processed 1800/4626\n",
       "Processed 1900/4626\n",
       "Processed 2000/4626\n",
+      "Row 2025 failed: IncompleteRead(11 bytes read)\n",
       "Processed 2100/4626\n",
       "Processed 2200/4626\n",
       "Processed 2300/4626\n",
+      "Row 2409 failed: IncompleteRead(11 bytes read)\n",
       "Processed 2400/4626\n",
       "Processed 2500/4626\n",
       "Processed 2600/4626\n",
@@ -1005,12 +1107,12 @@
     "                print(f\"Processed {i}/{len(df)}\")\n",
     "    print(f\"Done! Generated {len(new_summaries)} summaries\")\n",
     "else:\n",
-    "    print(\"Skipped generation - using loaded summaries\")\n"
+    "    print(\"Skipped generation - using loaded summaries\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "b3f71b96",
    "metadata": {},
    "outputs": [
@@ -1029,12 +1131,12 @@
     "        json.dump({str(k): v for k, v in new_summaries.items()}, f, ensure_ascii=False, indent=2)\n",
     "    print(f\"Saved {len(new_summaries)} summaries to {summaries_file}\")\n",
     "else:\n",
-    "    print(\"Summaries loaded from file - no need to save\")\n"
+    "    print(\"Summaries loaded from file - no need to save\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "5df53335",
    "metadata": {},
    "outputs": [
@@ -1045,13 +1147,13 @@
       "Sample generated summaries:\n",
       "================================================================================\n",
       "\n",
-      "[1] With a strong foundation in full-stack Java development, I bring over a decade of hands-on expertise in building and optimizing scalable web applications, leveraging technologies like Spring, Hibernate, and JSP to deliver robust solutions. My experience spans two distinct phases at Kunal IT Services...\n",
+      "[1] Highly motivated and results-oriented Java Developer with 10.45 years of experience in developing and maintaining robust Java-based web applications. Proven ability to leverage Spring, Hibernate, and MySQL within Agile environments.  I am proficient in front-end development using various technologie...\n",
       "--------------------------------------------------------------------------------\n",
       "\n",
-      "[2] A dedicated project manager with over eleven years of experience in telecommunications, specializing in seamless transitions, automation-driven quality assurance, and high-impact business development within enterprise-scale environments. With a proven track record at AT&T, I have successfully led en...\n",
+      "[2] Highly accomplished Project Manager with 11+ years at AT&T, leading complex transition and operational projects within the telecommunications industry. Proven expertise in vendor management, risk mitigation, and driving quality through automation and process improvements. Skilled in Agile methodolog...\n",
       "--------------------------------------------------------------------------------\n",
       "\n",
-      "[3] A seasoned advocate with over a decade of specialized legal expertise, I specialize in advising clients on their rights across diverse legal matters, from criminal and personal injury claims to complex international disputes. My practice spans advocacy before courts, tribunals, and corporate boards,...\n",
+      "[3] Highly accomplished Advocate with 13.32 years of experience advising clients on legal rights and representing them in courts across various jurisdictions, including international companies. Proven expertise in legal research, document drafting (bail petitions, appeals, contracts, etc.), and complex ...\n",
       "--------------------------------------------------------------------------------\n"
      ]
     }
@@ -1069,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "a31edb56",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "6e42c98d",
    "metadata": {},
    "outputs": [
@@ -1152,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "3e562e7e",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "d045df8f",
    "metadata": {},
    "outputs": [],
@@ -1199,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "7b3ed737",
    "metadata": {},
    "outputs": [
