Made the test 2 and 3 data with the metrics checking if the generated resumes are good.

--- a/Summary_Metrics_Evaluation.ipynb
+++ b/Summary_Metrics_Evaluation.ipynb
@@ -11,18 +11,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Original summaries: 4817\n",
-            "Generated summaries: 4626\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Setup: Load both original and generated summaries\n",
         "import json\n",
@@ -32,10 +23,7 @@
         "    original_summaries = json.load(f)\n",
         "\n",
         "with open('generated_summaries.json', 'r', encoding='utf-8') as f:\n",
-        "    generated_summaries = json.load(f)\n",
-        "\n",
-        "print(f\"Original summaries: {len(original_summaries)}\")\n",
-        "print(f\"Generated summaries: {len(generated_summaries)}\")"
+        "    generated_summaries = json.load(f)\n"
       ]
     },
     {
