--- a/Test 2 Data/generate_test2_resumes.ipynb
+++ b/Test 2 Data/generate_test2_resumes.ipynb
@@ -440,7 +440,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Metric 1: Word Count Comparison"
+        "### Metric: Word Count Comparison"
       ]
     },
     {
@@ -479,60 +479,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Metric 2: Content Similarity Between Styles (TF-IDF Cosine)\n",
-        "\n",
-        "High similarity = same content, just different wording style. Meaning that Scores > 0.5 indicate the versions maintain similar content"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 49,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "CONTENT SIMILARITY (should be high if same content)\n",
-            "Neutral ↔ Overstated:   0.765\n",
-            "Neutral ↔ Understated:  0.841\n"
-          ]
-        }
-      ],
-      "source": [
-        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-        "from sklearn.metrics.pairwise import cosine_similarity\n",
-        "\n",
-        "tfidf = TfidfVectorizer(stop_words='english', max_features=3000)\n",
-        "\n",
-        "# Calculate similarity between neutral-overstated and neutral-understated\n",
-        "neutral_overstated_sims = []\n",
-        "neutral_understated_sims = []\n",
-        "\n",
-        "for idx, row in df.iterrows():\n",
-        "    # Neutral vs Overstated\n",
-        "    mat = tfidf.fit_transform([str(row['neutral']), str(row['overstated'])])\n",
-        "    neutral_overstated_sims.append(cosine_similarity(mat[0:1], mat[1:2])[0][0])\n",
-        "    \n",
-        "    # Neutral vs Understated\n",
-        "    mat = tfidf.fit_transform([str(row['neutral']), str(row['understated'])])\n",
-        "    neutral_understated_sims.append(cosine_similarity(mat[0:1], mat[1:2])[0][0])\n",
-        "\n",
-        "print(\"CONTENT SIMILARITY (should be high if same content)\")\n",
-        "print(f\"Neutral ↔ Overstated:   {np.mean(neutral_overstated_sims):.3f}\")\n",
-        "print(f\"Neutral ↔ Understated:  {np.mean(neutral_understated_sims):.3f}\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "### Visualization"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -559,16 +511,6 @@
         "axes[0].set_ylabel('Frequency')\n",
         "axes[0].set_title('Word Count by Style')\n",
         "axes[0].legend()\n",
-        "\n",
-        "# Similarity Distribution\n",
-        "axes[1].hist(neutral_overstated_sims, bins=20, alpha=0.6, label='Neutral↔Overstated', color='red')\n",
-        "axes[1].hist(neutral_understated_sims, bins=20, alpha=0.6, label='Neutral↔Understated', color='green')\n",
-        "axes[1].set_xlabel('Cosine Similarity')\n",
-        "axes[1].set_ylabel('Frequency')\n",
-        "axes[1].set_title('Content Similarity Between Styles')\n",
-        "axes[1].legend()\n",
-        "\n",
-        "plt.tight_layout()\n",
         "plt.show()"
       ]
     },
