changed combined text layout to match what we have in test 2

--- a/Smaller Models/distillBert.ipynb
+++ b/Smaller Models/distillBert.ipynb
@@ -173,13 +173,13 @@
         "## What we do here\n",
         "\n",
         "1. **`clean_value(v)`**: takes any cell value (string, number, or missing) and returns a clean string. If the value is missing (`pd.isna`), we return an empty string. Otherwise we convert to string, collapse repeated whitespace into single spaces, and strip leading/trailing whitespace.\n",
-        "2. **`row_to_text(row, target_col)`**: loops over every column in a row. For each column that is **not** the target label, we clean its value and prepend the column name in brackets (like `[skills] Python, SQL, ...`). This structure helps the model distinguish which part of the text is skills vs. experience vs. projects. We join all these pieces with spaces.\n",
+        "2. **`row_to_text(row, target_col)`**: builds a **natural resume format** by combining columns in a realistic order: Name, Contact Info, Summary, Experience, Education, Skills, Projects. This matches the format used in Test 2 data for consistency during evaluation.\n",
         "3. **Apply to DataFrame**: we create a new column `df[\"text\"]` by applying `row_to_text` to every row.\n",
-        "4. **Print a sample**: we show the first 600 characters of one resume's text to confirm the format looks correct, and we print the average text length in characters to get a sense of how long our inputs are (important for choosing `max_length` during tokenization).\n",
+        "4. **Print a sample**: we show a portion of one resume's text to confirm the format looks correct, and we print the average text length in characters to get a sense of how long our inputs are (important for choosing `max_length` during tokenization).\n",
         "\n",
         "## Why this matters\n",
         "\n",
-        "- **Structured input**: prefixing each field with `[column_name]` preserves the original structure (the model learns that `[skills]` comes before `[experience]`, etc.).\n",
+        "- **Natural format**: the resume text looks like a real resume (Name, Summary, Experience, Education, Skills) which matches how test data is formatted.\n",
         "- **Single sequence**: the tokenizer and model expect one text string per example, not a dictionary of columns.\n",
         "- **Average length**: knowing the typical character count helps us decide if 512 tokens is enough or if we're truncating a lot of information."
       ]
@@ -208,6 +208,7 @@
       ],
       "source": [
         "def clean_value(v):\n",
+        "    \"\"\"Clean a cell value - return empty string if missing, otherwise clean whitespace.\"\"\"\n",
         "    if pd.isna(v):\n",
         "        return \"\"\n",
         "    s = str(v)\n",
@@ -215,18 +216,61 @@
         "    return s\n",
         "\n",
         "def row_to_text(row, target_col):\n",
+        "    \"\"\"\n",
+        "    Build resume text in a natural format (like a real resume).\n",
+        "    This matches the format used in Test 2 data for consistency.\n",
+        "    \"\"\"\n",
         "    parts = []\n",
-        "    for col, val in row.items():\n",
-        "        if col == target_col:\n",
-        "            continue\n",
-        "        s = clean_value(val)\n",
-        "        if s:\n",
-        "            parts.append(f\"[{col}] {s}\")\n",
-        "    return \" \".join(parts)\n",
+        "    \n",
+        "    # 1. Contact Info (Name, Email, LinkedIn, GitHub)\n",
+        "    name = clean_value(row.get('name', ''))\n",
+        "    email = clean_value(row.get('email', ''))\n",
+        "    linkedin = clean_value(row.get('linkedin', ''))\n",
+        "    github = clean_value(row.get('github', ''))\n",
+        "    \n",
+        "    if name and name.lower() not in ['unknown', 'not provided']:\n",
+        "        parts.append(name)\n",
+        "    \n",
+        "    contact_parts = []\n",
+        "    if email and email.lower() not in ['unknown', 'not provided']:\n",
+        "        contact_parts.append(email)\n",
+        "    if linkedin and linkedin.lower() not in ['unknown', 'not provided']:\n",
+        "        contact_parts.append(linkedin)\n",
+        "    if github and github.lower() not in ['unknown', 'not provided']:\n",
+        "        contact_parts.append(github)\n",
+        "    if contact_parts:\n",
+        "        parts.append(' | '.join(contact_parts))\n",
+        "    \n",
+        "    # 2. Summary\n",
+        "    summary = clean_value(row.get('summary', ''))\n",
+        "    if summary:\n",
+        "        parts.append('\\nSUMMARY\\n' + summary)\n",
+        "    \n",
+        "    # 3. Experience\n",
+        "    experience = clean_value(row.get('experience', ''))\n",
+        "    if experience:\n",
+        "        parts.append('\\nEXPERIENCE\\n' + experience)\n",
+        "    \n",
+        "    # 4. Education\n",
+        "    education = clean_value(row.get('education', ''))\n",
+        "    if education:\n",
+        "        parts.append('\\nEDUCATION\\n' + education)\n",
+        "    \n",
+        "    # 5. Skills\n",
+        "    skills = clean_value(row.get('skills', ''))\n",
+        "    if skills:\n",
+        "        parts.append('\\nSKILLS\\n' + skills)\n",
+        "    \n",
+        "    # 6. Projects\n",
+        "    projects = clean_value(row.get('projects', ''))\n",
+        "    if projects and projects.lower() not in ['no projects made', 'not provided']:\n",
+        "        parts.append('\\nPROJECTS\\n' + projects)\n",
+        "    \n",
+        "    return '\\n'.join(parts)\n",
         "\n",
         "df[\"text\"] = df.apply(lambda r: row_to_text(r, TARGET_COL), axis=1)\n",
         "\n",
-        "print(df[\"text\"].iloc[0][:600])\n",
+        "print(df[\"text\"].iloc[0][:1500])\n",
         "print(\"\\nAverage text length (chars):\", int(df[\"text\"].str.len().mean()))"
       ]
     },
@@ -971,7 +1015,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.1"
+      "version": "3.11.4"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
